minus validation in ejs and unique email and tag

--- a/views/postForm.ejs
+++ b/views/postForm.ejs
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mx-auto mt-4">
-                    <form action="/posts/add" method="post">
+                    <form action="/posts/<%= !post ? 'add' : `${post.id}/edit`%>" method="post">
                         <div class="mb-3">
                             <label for="title" class="form-label">Title</label>
                             <input type="text" class="form-control" name="title" placeholder="Enter title" value="<%= post ? post?.title : '' %>">
