--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,12 +61,12 @@
                                 <form action="/" method="post">
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="email">Email</label>
-                                        <input type="email" name="email" class="form-control" />
+                                        <input type="email" name="email" class="form-control" required/>
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="password">Password</label>
-                                        <input type="password" name="password" class="form-control" />
+                                        <input type="password" name="password" class="form-control" required/>
                                     </div>
 
                                     <div class="text-center pt-1 mb-5 pb-1">
@@ -84,17 +84,13 @@
                         <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                             <div class="text-white px-3 py-4 p-md-5 mx-md-4">
                                 <h4 class="mb-4">We are more than just a social media</h4>
-                                <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                                    do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                <p class="small mb-0">we connect the developers.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>     
     </div>
     <script src="js/bootstrap.min.js"></script>
 </body>
