--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -2,6 +2,7 @@
     <nav class="navbar navbar-expand-lg" style="background-color: #F16634;">
         <div class="container-fluid">
             <a class="navbar-brand fst-italic fw-bolder" href="/" style="color: white;">Hackgram</a>
+            <a class="btn btn-outline-light" href="/logout">Logout</a>
         </div>
     </nav>
 </section>
