--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,12 +61,12 @@
                                 <form action="/" method="post">
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="email">Email</label>
-                                        <input type="email" name="email" class="form-control" required/>
+                                        <input type="email" name="email" class="form-control" placeholder="Enter Email" required/>
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="password">Password</label>
-                                        <input type="password" name="password" class="form-control" required/>
+                                        <input type="password" name="password" class="form-control" placeholder="Enter Password" required/>
                                     </div>
 
                                     <div class="text-center pt-1 mb-5 pb-1">
